# multi-rag-bot

./: .env.example  .gitignore  LICENSE  README.md  main.py  project_bootstrap.py  pyproject.toml  requirements.txt  test.py  ui_app.py
api/: app.py  dependencies.py  main.py
api/routes/: __init__.py  ask.py  health.py  ingest.py
api/schemas/: __init__.py  health.py
config/: settings.py
domains/droit_etranger/: benchmark.yaml  chunker_config.yaml  documents.yaml  prompt_template.txt  synonyms.txt
rag-plateform/: openai_client.py  pipeline.py  ssl_env.py
rag-plateform/generation/: openai_responder.py
rag-plateform/ingestion/chunkers/: article_chunker.py  base.py
rag-plateform/ingestion/embedders/: openai_embedder.py
rag-plateform/ingestion/loaders/: base.py  html_loader.py  pdf_local_loader.py  pdf_url_loader.py
rag-plateform/retrieval/: retriever.py  vector_store.py
scripts/: ingest.py  retrieve.py  run_benchmark.py  score_benchmark.py  serve_webapp.py  web_ui.py
tests/: test_api_entrypoint.py  test_article_chunker.py  test_loaders.py  test_openai_client.py  test_pipeline.py  test_retrieval.py  test_ssl_env.py  test_ui_app.py  test_vector_store.py
tests/fixtures/: chunker_generic.yaml
webapp/: index.html
webapp/assets/: api.js  app.js  auth.js  config.js  styles.css
webapp/chat/: index.html
webapp/docs/: index.html
webapp/documents/: index.html
webapp/login/: index.html
