[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-rag-bot"
version = "0.1.0"
description = "Local-first multi-domain RAG pipeline for legal documents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.0.0",
  "pydantic-settings>=2.0",
  "pymupdf>=1.24.0",
  "pyyaml>=6.0",
  "qdrant-client>=1.9.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
py-modules = []
